# staircaseNRP

./: .gitignore  requirements.txt
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/: .gitignore  CMakeLists.txt  README.md  TUTORIAL.md  acstr.hpp  allInterval.hpp  amongNurseModes.py  autoCMake.sh  avar.hpp  bitbucket-pipelines.yml  bitset.cpp  commandList.cpp  commandList.hpp  constraint.cpp  constraint.hpp  domain.cpp  domain.hpp  fail.hpp  handle.hpp  hashtable.hpp  heap.hpp  intvar.cpp  intvar.hpp  matching.cpp  matching.hpp  mdd.cpp  mdd.hpp  mddAbs.cpp  mddAlldiff.cpp  mddAmong.cpp  mddConstraints.hpp  mddGcc.cpp  mddGoc.cpp  mddMaximumCutObjective.cpp  mddPrecedence.cpp  mddSeq.cpp  mddSum.cpp  mddTSPSum.cpp  mdddelta.cpp  mdddelta.hpp  (+24 more)
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/data/: br17.10.sop  prob.100.sop  prob.42.sop
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/examples/: Makefile  adac.cpp  ais.cpp  bibd.cpp  fz.cpp  magicserie.cpp  magicsquarePaper.cpp  main2.cpp  main3.cpp  mddamong.cpp  nqperf.cpp  nqueensAC.cpp  qaplns.cpp  regular.cpp  stablemarriage.cpp  steel.cpp  table.cpp  tsp.cpp
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/examples/data/: dataMini  datao
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/examples/mdd/: MCP.cpp  MISP.cpp  MISPfile.cpp  SOP.cpp  aisMDDTuto.cpp  allInterval.cpp  allIntervalBC.cpp  alldiff.cpp  alldiffOverlap.cpp  alldiffOverlap0.cpp  among2.cpp  among2Relax.cpp  among4.cpp  among4Relax.cpp  amongNurse.cpp  amongNurse2.cpp  amongNurse_test.cpp  amongSeqGcc.cpp  amongsum.cpp  bench3.py  carSeq.cpp  carSeqMDD.cpp  carSeqMDD_WVH.cpp  carSeq_newSearch.cpp  gccTest.cpp  mediumAllDiff.cpp  mediumAllDiffRelax.cpp  mediumAmong.cpp  mediumGCC.cpp  mediumGCCRelax.cpp  mediumSeq.cpp  mediumSeqRelax.cpp  mis1.cpp  mis2.cpp  mis3.cpp  mis4.cpp  multipletTinyAmong.cpp  sequenceNurse.cpp  sequenceNurseNew.cpp  sequenceNurseSplit.cpp  (+15 more)
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/examples/mdd/paper/: allInterval.cpp  amongNurse.cpp
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/examples/mzn/: depot_placement.fzn  freepizza.fzn  knights.fzn  openshop.fzn  queens.fzn  queens.mzn  testamong.mzn  tsp-filtered.fzn  tsp.dzn  tsp.fzn  tsp.mzn  tsp.ozn  tsp.txt  tsp_small.fzn
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/examples/pybench/: magicsquare.py  mserie.py  nq.py  nqueens.py  nqueens0.py  qap.py  readme.org  tsp.py
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/examples/tutorial/: aisCP.cpp  aisMDD.cpp  atMost.cpp  atMostHandout.cpp  misCP.cpp  misMDD.cpp
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/fz_constraints/: bool_array.cpp  bool_array.hpp  bool_bin.cpp  bool_bin.hpp  bool_lin.cpp  bool_lin.hpp  bool_misc.cpp  bool_misc.hpp  flatzinc.cpp  flatzinc.hpp  int_array.cpp  int_array.hpp  int_bin.cpp  int_bin.hpp  int_lin.cpp  int_lin.hpp  int_tern.cpp  int_tern.hpp
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/master/fz_parser/: flatzinc.cpp  flatzinc.h  parser.tab.cpp  registry.cpp  registry.h
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/minicpp/: .gitignore  CMakeLists.txt  README.md  RuntimeMonitor.cpp  RuntimeMonitor.hpp  acstr.cpp  acstr.hpp  bitbucket-pipelines.yml  bitset.cpp  bitset.hpp  constraint.cpp  constraint.hpp  cont.cpp  cont.hpp  context.cpp  domain.cpp  domain.hpp  fail.hpp  generatePlotArrays.py  handle.hpp  hashtable.hpp  heap.hpp  intvar.cpp  intvar.hpp  matching.cpp  matching.hpp  matrix.hpp  mdd.cpp  mdd.hpp  mddAlldiff.cpp  mddAmong.cpp  mddConstraints.hpp  mddGcc.cpp  mddSeq.cpp  mddSum.cpp  mdddelta.cpp  mdddelta.hpp  mddnode.cpp  mddnode.hpp  mddrelax.cpp  (+17 more)
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/minicpp/XCode.xcworkspace/xcuserdata/ldm.xcuserdatad/: UserInterfaceState.xcuserstate
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/minicpp/copl/copl.xcodeproj/: project.pbxproj
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/minicpp/copl/test1/: main.cpp
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/minicpp/data/: stable_marriage.txt
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/minicpp/examples/: adac.cpp  inout.cpp  magicserie.cpp  magicsquare.cpp  main.cpp  mainCont.cpp  mddamong.cpp  msperf.cpp  nqueensAC.cpp  qap.cpp  tsp.cpp
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/minicpp/examples/data/: workforce50.csv
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/minicpp/examples/mdd/: allBench.py  allIntervalBC.cpp  alldiffOverlap.cpp  alldiffOverlap0.cpp  among2.cpp  among2Relax.cpp  among4.cpp  among4Relax.cpp  amongNurse2.cpp  amongNurse_test.cpp  amongSeqGcc.cpp  amongsum.cpp  bench.py  bench2.py  carSeq.cpp  carSeqMDD.cpp  carSeqMDD_WVH.cpp  carSeq_newSearch.cpp  gccTest.cpp  mediumAllDiff.cpp  mediumAllDiffRelax.cpp  mediumAmong.cpp  mediumGCC.cpp  mediumGCCRelax.cpp  mediumSeq.cpp  mediumSeqRelax.cpp  multipletTinyAmong.cpp  sequenceNurse.cpp  sequenceNurseSplit.cpp  sequenceTest.cpp  sequenceTest2.cpp  sequenceTest3.cpp  sequenceTestSplit.cpp  sumAlldiff.cpp  sumMDD.cpp  tinyAllDiff.cpp  tinyAllDiffRelax.cpp  tinyGCC.cpp  tinySeq.cpp  tinySeqRelax.cpp  (+4 more)
Compare_NRP/CPLEX-For-NRP/CP/cpp_model/MiniCP/minicpp/mzn/: testamong.co
(+68 files in other folders)
